# Quantos

./: .dockerignore  .env.example  .gitignore  .vercelignore  AUDIT_SCOPE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  LICENSE  Makefile  README.md  quantos_generate_pdf.py  stack.md  vercel.json
L1/: .dockerignore  Cargo.toml  Dockerfile  README.md  STACC_README.md  docker-compose.yml  push-all.sh
L1/benches/: live_tps_bench.rs  pqc_bloat.rs  raw_tps.rs  testnet_tps.rs  tps_throughput.rs
L1/config/: bootnodes.json
L1/docs/: 00-overview.md  02-post-quantum-cryptography.md  02a-crypto-primitives.md  03c-advanced-consensus.md  04-performance.md  04ba-state.md  04c-virtual-machine.md  04e-storage.md  04f-mempool.md  05-stacc.md  05a-tokenomics.md  05b-staking.md  06-layer0.md  08-pqc-guard.md  08a-sidechains.md  09-network.md  10c-node-ops.md  10d-comparison.md  10f-roadmap.md  10g-glossary.md  10h-references.md  11-conclusion.md  12-smart-contracts.md
L1/fuzz/: Cargo.toml
L1/fuzz/fuzz_targets/: fuzz_chain_proof_json.rs  fuzz_network_message.rs  fuzz_rlp_decode.rs  fuzz_tx_deserialize.rs  fuzz_tx_prefilter.rs
L1/monitoring/: prometheus.yml
L1/networks/devnet/: docker-compose.yml
L1/networks/testnet/: .gitignore  bootstrap.sh  docker-compose.yml
L1/scripts/: approve_project.py  deploy_dex.py  deploy_lynx_nft.py  deploy_memecoin.py  deploy_otc.py  deploy_p2p.py  deploy_qns.py  e2e_sqtest.py  run-testnet.sh  setup_grants_onchain.py  setup_nft_marketplace.py  stop-testnet.sh  test_flash_loan.py  test_flash_loan_e2e.py  test_liquidation_e2e.py
L1/sdk/: README.md  package.json
L1/sdk/src/: index.js  rpc.js
L1/solidity-contracts/: SQTEST.contract  SQTEST.sol  SQTEST.wasm  SQTESTEngine.contract  SQTESTEngine.sol  deployed_addresses.txt  deployed_qns_address.txt
L1/solidity-contracts/dao/: VybssDAOHub.contract
L1/solidity-contracts/dex/: IERC20.sol  TestMath.sol  TestMath.wasm  TestMinimal.sol  VybssFactory.sol  VybssFactory.wasm  VybssPool.contract  VybssPool.sol  VybssRouter.sol  VybssRouter.wasm  deployed_dex_addresses.txt
L1/solidity-contracts/grants/: VybssGrants.sol
L1/solidity-contracts/ido/: VybssIDO.sol
L1/solidity-contracts/insurance/: VybssInsurancePool.sol  insQTEST.sol
L1/solidity-contracts/lending/: SimpleFlashReceiver.sol  VybssDebtToken.contract  VybssDebtToken.sol  VybssLToken.sol  VybssLToken.wasm  VybssLendingPool.sol  VybssLendingPool.wasm  lending_seed.sql
L1/solidity-contracts/marketplace/: VybssNFTMarketplace.contract  VybssNFTMarketplace.sol  VybssNFTMarketplace.wasm  marketplace_selectors.json
L1/solidity-contracts/memecoin/: MemecoinLaunchpad.contract  MemecoinLaunchpad.sol  MemecoinToken.sol
L1/solidity-contracts/nft/: LynxNFT.contract  LynxNFT.sol  LynxNFT.wasm  deployed_nft_addresses.txt
L1/solidity-contracts/otc/: VybssOTCSwap.sol  VybssOTCSwap.wasm
L1/solidity-contracts/p2p/: VybssP2PEscrow.sol  VybssP2PEscrow.wasm  deployed_p2p_address.txt
L1/solidity-contracts/perp/: PerpEngine.sol  PerpEngine.wasm  PriceOracle.sol  VaultManager.contract  VaultManager.sol
L1/solidity-contracts/predictions/: VybssPrediction.contract  VybssPrediction.sol
L1/solidity-contracts/profile-keys/: VybssProfileKeys.sol  VybssProfileKeys.wasm  deployed_profile_keys_address.txt
L1/solidity-contracts/restaking/: VybssRestakingVault.contract  VybssRestakingVault.sol  restaking-deployment.json  rstQTEST.contract  rstQTEST.sol
L1/solidity-contracts/social/: VybssRedPacket.sol
L1/solidity-contracts/staking/: VybssLiquidStaking.sol  deploy_liquid_staking.py  liquid-staking-deployment.json  stQTEST.contract  stQTEST.sol
L1/src/: cli.rs  config.rs  lib.rs  main.rs  solang_cli.rs  validator_keys.rs
L1/src/batching/: mod.rs
L1/src/compression/: mod.rs
L1/src/consensus/: adversarial_tests.rs  beacon.rs  committee.rs  cross_shard_atomic.rs  cross_shard_protocol.rs  dynamic_committee.rs  fast_path.rs  finality.rs  mod.rs  optimistic_responsiveness.rs  pipelining.rs  quantos.rs  safety_model.rs  slashing.rs  view_change.rs
L1/test-contracts/: QNS.contract  QNS.sol  QNS.wasm  QTEST.contract  QTEST.sol  QTEST.wasm  QuantosBridgeVault.contract  QuantosBridgeVault.sol  QuantosBridgeVault.wasm  QuantosToken.sol  SimpleStorage.sol  deploy_qtest.py  test_full.sh  test_transfer.sh  test_transfer_qts1.sh
L1/tests/: cross_contract_test.rs  solang_real.rs  sqtest_cross_contract.rs
base-bridge/icp/: Cargo.toml
quantos/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
quantos-l0-sdk/: Cargo.toml  README.md  package.json
quantos-l0-sdk/src/: error.rs  fetcher.rs  index.ts  lib.rs  registry.rs  types.rs  verifier.rs
quantos-wallet-core/: Cargo.toml  build.sh
quantos-wallet-core/src/: lib.rs
quantos-wallet-server/: Cargo.toml  get_selector.rs  test_sk_size.rs
quantos-wallet-server/src/: crypto.rs  error.rs  main.rs  node_rpc.rs  routes.rs  session.rs  state.rs  types.rs
quantos/benches/: pqc_bloat.rs  testnet_tps.rs
quantos/config/: bootnodes.txt  testnet-genesis.json
quantos/docs/: 00-overview.md  01-introduction.md  03-consensus.md  03a-dag.md  03b-committees.md  04-performance.md  04b-sharding.md  04d-token-standards.md  04f-mempool.md  07-migration.md  09a-da-compression.md  10-security.md  10a-ecosystem.md  10b-governance.md  10d-comparison.md  10e-use-cases.md  10f-roadmap.md  10g-glossary.md  12-smart-contracts.md
quantos/scripts/: deploy_grants.py  deploy_ido.py  deploy_lending.py  deploy_perp.py  deploy_prediction.py  deploy_profile_keys.py  deploy_sqtest.py  multi-validator.sh  run-devnet.sh  start-testnet.sh  test_sqtest_deposit.py
quantos/sdk/: README.md  package-lock.json
quantos/solidity-contracts/: SQTEST.sol  SQTESTEngine.sol  SQTESTEngine.wasm  deployed_addresses.txt
quantos/src/: cli.rs  lib.rs  main.rs  validator_keys.rs
quantos/test-contracts/: QNS.sol  QTEST.sol  QuantosBridgeVault.sol  QuantosToken.sol  SimpleStorage.sol  deploy_bridge_vault.py  deploy_qtest.py  test_faucet.py  test_transfer2.sh
quantos/tests/: cross_contract_test.rs  solang_real.rs  sqtest_cross_contract.rs
(+679 files in other folders)
