[package]
name = "quantos-wallet-server"
version = "0.1.0"
edition = "2021"
authors = ["Quantos Labs"]
description = "Quantos Wallet Backend — stateless session-based wallet service"
license = "MIT"

[[bin]]
name = "quantos-wallet-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Post-Quantum Cryptography (same version as quantos node)
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Hashing (same as quantos node)
sha3 = "0.10"

# Encryption (AES-256-GCM for PIN-encrypted keys)
aes-gcm = "0.10"
rand = "0.8"

# Encoding
hex = "0.4"
data-encoding = "2.5"
base64 = "0.22"

# HTTP client (to call quantos node RPC)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utils
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
zeroize = { version = "1.7", features = ["derive"] }
dotenvy = "0.15"
