[package]
name = "quantos"
version = "0.1.0"
edition = "2021"
authors = ["Quantos Labs"]
description = "Quantos - Post-Quantum L1 Blockchain with Massive Parallelization, Dynamic Sharding & Sidechains"
license = "MIT"
repository = "https://github.com/quantos-labs/quantos"
keywords = ["blockchain", "post-quantum", "dilithium", "l1", "sharding"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Post-Quantum Cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"

# zk-STARKs
winterfell = "0.9"
winter-math = "0.9"
winter-crypto = "0.9"
winter-air = "0.9"
winter-prover = "0.9"
winter-verifier = "0.9"
winter-utils = "0.9"

# Hashing
sha3 = "0.10"
sha2 = "0.10"
blake3 = "1.5"

# Encryption (for bytecode protection)
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization & Compression
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
lz4 = "1.24"
lz4_flex = "0.11"
zstd = "0.13"
snap = "1.1"

# Storage
rocksdb = "0.22"

# Networking - Full libp2p with all features
libp2p = { version = "0.53", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "tokio",
    "macros",
    "ping",
    "request-response",
    "dns",
    "websocket",
] }
tokio = { version = "1.35", features = ["full"] }

# RPC
jsonrpsee = { version = "0.21", features = ["server", "client", "macros"] }

# HTTP client (for quantos-sol CLI)
reqwest = { version = "0.11", features = ["blocking", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utils
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
data-encoding = "2.5"
rand = "0.8"
rand_chacha = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
rayon = "1.8"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
num_cpus = "1.16"
async-trait = "0.1"
futures = "0.3"
prometheus = "0.13"

# Merkle Tree
rs_merkle = "1.4"

# WASM Runtime
wasmer = "4.2"
wasmer-compiler-cranelift = "4.2"
wasmer-middlewares = "4.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.9"
tokio-test = "0.4"
wat = "1.0"

[[bin]]
name = "quantos"
path = "src/main.rs"

[[bin]]
name = "quantos-cli"
path = "src/cli.rs"

[[bin]]
name = "quantos-sol"
path = "src/solang_cli.rs"

[[bench]]
name = "raw_tps"
harness = false

[[bench]]
name = "testnet_tps"
harness = false

[[bench]]
name = "pqc_bloat"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
