[package]
name = "quantos-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "BUSL-1.1"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bincode = "1"
serde_json = "1"

[dependencies.quantos]
path = ".."

[[bin]]
name = "fuzz_tx_deserialize"
path = "fuzz_targets/fuzz_tx_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tx_prefilter"
path = "fuzz_targets/fuzz_tx_prefilter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_network_message"
path = "fuzz_targets/fuzz_network_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rlp_decode"
path = "fuzz_targets/fuzz_rlp_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chain_proof_json"
path = "fuzz_targets/fuzz_chain_proof_json.rs"
test = false
doc = false
bench = false
