[package]
name = "quantos-pqc-guard-near"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.5"

[dev-dependencies]
near-sdk = { version = "5.5", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
