[package]
name = "quantos-pqc-guard-stellar"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21"

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
