[package]
name = "quantos_pqc_guard"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "quantos_pqc_guard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
