[package]
name = "solana-prediction-market"
version = "0.1.0"
description = "Multichain-style prediction market for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_prediction_market"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.17.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
spl-token = "4.0.0"
